# sql_assignment_generator

./: .env.template  .gitignore  Makefile  README.md  assignment.py  database.py  main.py  misconceptions.py  prompt.py  pyproject.toml  requirements.txt  test.py  testDatasetGeneration.py  testExerciseGeneration.py
CSV/: COM_83_UNNECESSARY_DISTINCT_IN_SELECT_CLAUSE.csv  COM_88_LIKE_WITHOUT_WILDCARDS.csv  COM_97_GROUP_BY_CAN_BE_REPLACED_WITH_DISTINCT.csv  DB_test.csv  LOG_58_JOIN_ON_INCORRECT_TABLE.csv  LOG_59_JOIN_WHEN_JOIN_NEEDS_TO_BE_OMITTED.csv  LOG_62_MISSING_JOIN.csv  LOG_70_EXTRANEOUS_COLUMN_IN_SELECT.csv  LOG_71_MISSING_COLUMN_FROM_SELECT.csv  LOG_72_MISSING_DISTINCT_FROM_SELECT.csv  LOG_73_MISSING_AS_FROM_SELECT.csv  SEM_40_TAUTOLOGICAL_OR_INCONSISTENT_EXPRESSION.csv  SYN_15_AGGREGATE_FUNCTIONS_CANNOT_BE_NESTED.csv  SYN_19_USING_WHERE_TWICE.csv  SYN_21_COMPARISON_WITH_NULL.csv  SYN_26_TOO_MANY_COLUMNS_IN_SUBQUERY.csv  SYN_2_AMBIGUOUS_COLUMN.csv  SYN_35_IS_WHERE_NOT_APPLICABLE.csv  SYN_4_UNDEFINED_COLUMN.csv  SYN_7_UNDEFINED_OBJECT.csv  SYN_9_MISSPELLINGS.csv
docs/: conf.py
src/sql_assignment_generator/: __init__.py  assignments.py  domains.py  exceptions.py  main.py  query_executor.py  query_sintax.py  sql_errors_details.py  translatable_text.py
src/sql_assignment_generator/_OLD/: main.py
src/sql_assignment_generator/assignments/: __init__.py  assignment.py  assignment_answer_format.py  dataset.py  exercise.py  query_sintax.py
src/sql_assignment_generator/constraints/: __init__.py  base.py  costraintType.py  query.py  schema.py
src/sql_assignment_generator/db/: __init__.py  database.py  exceptions.py
src/sql_assignment_generator/error_requirements/: __init__.py  base.py  err_002.py  err_004.py  err_007.py  err_009.py  err_010.py  err_011.py  err_012.py  err_015.py  err_019.py  err_021.py  err_026.py  err_035.py  err_039.py  err_040.py  err_041.py  err_042.py  err_043.py  err_044.py  err_045.py  err_046.py  (+43 more)
tests/: test_query_executor.py
(+60 files in other folders)
