[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sql_assignment_generator"
version = "0.2.3"
authors = [
  { name="Davide Ponzini", email="davide.ponzini95@gmail.com" },
]
description = "This project generates SQL assignments based on common mistakes made by learners."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "dav_tools>=0.4.22",
    "pydantic>=2.10.4",
    "sql-error-taxonomy>=1.0.2",
    "sqlscope>=1.0.12",
    "sqlglot>=11.5.6",
    "dotenv",
    "openai",
    "psycopg2",
    "mysql-connector-python"
]

[project.urls]
"Repository" = "https://github.com/DavidePonzini/sql_assignment_generator"
"Documentation" = "https://sql-assignment-generator.readthedocs.io/en/latest/index.html"
"Bug Tracker" = "https://github.com/DavidePonzini/sql_assignment_generator/issues"
